<resources>
    <string name="app_name">QuizProject</string>
    <string name="start">Start</string>
    <string name="ranking">ranking</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="cheat_toast">Cheat!</string>
    <string name="skip_toast">Skip!</string>
    <string name="question_text">Test</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="cheat_button">cheat</string>
    <string name="skip_button">skip</string>
    <string name="menu_button">menu</string>
    <string name="next_button">next</string>
    <string name="judgment_toast">you cheated!</string>
    <string name="start_button">Start!</string>
    <string name="question_oceans">The Pacific Ocean is larger than
    the Atlantic Ocean.</string>
  <string name="question_mideast">The Suez Canal connects the Red Sea
    and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
  <string name="question_americas">The Amazon River is the longest river
    in the Americas.</string>
  <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
    freshwater lake.</string>
    <string name="finish_button">finish</string>
</resources>
